# flowsync

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  Web管理后台与任务调度.md  codex.yaml  docker-compose.yml  rust-s3-sync 项目需求.md  rust_s3_sync.db
scripts/: e2e_minio.sh
src/: cli.rs  config.rs  engine.rs  main.rs  remote.rs  server.rs
src/server/: api.rs  db.rs  events.rs  scheduler.rs
tests/e2e/: docker-compose.minio.yml
