[package]
name = "rust-s3-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytesize = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
futures = "0.3"
globset = "0.4"
indicatif = "0.17"
opendal = { version = "0.49", features = ["services-fs", "services-s3", "services-sftp"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
md5 = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "io-util"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir = "2"
