[package]
name = "flowsync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
bytesize = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
futures = "0.3"
globset = "0.4"
indicatif = "0.17"
opendal = { version = "0.55", features = ["services-fs", "services-s3", "services-sftp"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
md5 = "0.7"
sysinfo = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "io-util"] }
tokio-cron-scheduler = "0.13"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
